<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reels Editing</string>
    <string name="reels_editing">Reels Editing</string>
    <string name="back_button">Back</string>
    <string name="video_preview">Video Preview</string>
    <string name="video_duration">0:00</string>
    <string name="music">Music</string>
    <string name="text_label">Text</string>
    <string name="effects">Effects</string>
    <string name="export">Export</string>
</resources>
